--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas
-numpy
-scikit-learn
-catboost
-seaborn
-matplotlib
-flask
+catboost==1.2.8
+Flask==3.1.1
+joblib==1.5.1
+matplotlib==3.10.3
+numpy==2.2.6
+pandas==2.3.0
+scikit-learn==1.7.0
+seaborn==0.13.2
